recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:11: error: reassignment to val
		steps = steps-1
                      ^